kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: photo-backup-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - receiver.verussensus.com
    secretName: letsencrypt-prod
  rules:
  - host: receiver.verussensus.com
    http:
      paths:
      - backend:
          serviceName: receiver
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: receiver
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: receiver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receiver
    
spec:
  selector:
    matchLabels:
      app: receiver
  replicas: 1
  template:
    metadata:
      labels:
        app: receiver
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9102'
    spec:
      containers:
      - name: receiver
        image: wearebrews/photo-backup-receiver
        imagePullPolicy: Always
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9102
          name: prometheus
